@@ -14,6 +14,7 @@ our @EXPORT_OK = qw(
     is_aromatic
     is_chiral
     is_cis_trans_bond
+    is_double_bond
     is_single_bond
     mirror
     toggle_cistrans
@@ -86,6 +87,13 @@ sub is_cis_trans_bond($$$)
     my( $moiety, $a, $b ) = @_;
     return $moiety->has_edge_attribute( $a, $b, 'bond' ) &&
            $moiety->get_edge_attribute( $a, $b, 'bond' ) =~ /^[\\\/]$/;
+}
+
+sub is_double_bond($$$)
+{
+    my( $moiety, $a, $b ) = @_;
+    return $moiety->has_edge_attribute( $a, $b, 'bond' ) &&
+           $moiety->get_edge_attribute( $a, $b, 'bond' ) eq '=';
 }
 
 sub is_single_bond($$$)
