@@ -1,6 +1,7 @@
 0.8.2 unreleased
 
     - Fixing prototypes of recently added functions.
+    - Introducing Chemistry::OpenSMILES::is_double_bond().
 
 0.8.1 2022-05-11
 
